Cropped the main picture in hopes of fixing display issues

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ h1 {
 
 }
 #home {
-    background: url(images/tulum-nonickie-2mb.png) 50% -100px fixed;
+    background: url(images/tulum-nonickie-cropped.png) 50% -100px fixed;
     background-size: cover;
     height: 500px;
     margin: 0 auto;
